--- a/facebook.html
+++ b/facebook.html
@@ -15,8 +15,10 @@
     </head>
     <body>
       <!-- All of your HTML will go between here....-->
-      <nav class="navbar navbar-default">
-        NAVBAR
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            NAVBAR
+        </div>
       </nav>
       <!-- The container for our grid. Outermost grid must be placed within a
       container or conatiner-fluid class.
@@ -30,6 +32,8 @@
             <!-- Main feed, cell spans 7 columns-->
             <div class="col-md-7">
               Main feed
+              <div style="height: 999999px">
+              </div>
             </div>
             <!--Right sidebar, spans 3 columns-->
             <div class="col-md-3">
@@ -38,7 +42,6 @@
             <div class="chat-popup">
               CHAT MENU
             </div>
-          </div>
         </div>
 
       <!--... and here. -->
