--- a/facebook.html
+++ b/facebook.html
@@ -17,7 +17,76 @@
       <!-- All of your HTML will go between here....-->
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-            NAVBAR
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data toggle="collapse"
+              data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <!-- Use home glyphicon as logo -->
+            <a class="navbar-brand" href="#">
+              <!-- How you display the icon -->
+              <span class="glyphicon glyphicon-home"></span>
+            </a>
+          </div>
+          <!-- On mobile this is hidden by default... -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <form class="navbar-form navbar-left" role="search">
+              <!-- Left aligned items -->
+              <div class="input-group">
+                <input type="text" class="form-control fb-search" placeholder= "Search Facebook">
+                <span class="input-group-btn">
+                  <button type="submit" class="btn btn-default">
+                    <span class="glyphicon glyphicon-search"></span>
+                  </button>
+                </span>
+              </div>
+            </form>
+            <div class="nav navbar-nav navbar-right">
+              <!-- Right aligned items -->
+              <div class="button tool-bar pull-right" role="toolbar">
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default navbar-btn" class="btn btn-default">
+                    John
+                  </button>
+                </div>
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default navbar-btn" class="btn btn-default">
+                    <span class="glyphicon glyphicon-user"></span>
+                    <span class="badge">5</span>
+                  </button>
+                  <button type="button" class="btn btn-default navbar-btn" class="btn btn-default">
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <span class="badge">1</span>
+                  </button>
+                  <button type="button" class="btn btn-default navbar-btn" class="btn btn-default">
+                    <span class="glyphicon glyphicon-globe"></span>
+                    <span class="badge">3</span>
+                  </button>
+                </div>
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default navbar-btn" class="btn btn-default">
+                    <span class="glyphicon glyphicon-lock"></span>
+                  </button>
+                  <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default navbar-btn" class="btn btn-default dropdown toggle"
+                      data-toggle="dropdown">
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a href="#" Log Out... </a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </ul>
+          </div> <!-- /.navbar-collapse -->
+        </div> <!-- /.container -->
+      </nav>
+
         </div>
       </nav>
       <!-- The container for our grid. Outermost grid must be placed within a
@@ -32,7 +101,7 @@
             <!-- Main feed, cell spans 7 columns-->
             <div class="col-md-7">
               Main feed
-              <div style="height: 999999px">
+              <div style="height: 99999px">
               </div>
             </div>
             <!--Right sidebar, spans 3 columns-->
