--- a/facebook.html
+++ b/facebook.html
@@ -48,55 +48,103 @@
               <!-- Right aligned items -->
               <div class="button tool-bar pull-right" role="toolbar">
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default navbar-btn" class="btn btn-default">
+                  <button type="button" class="btn btn-default navbar-btn">
                     John
                   </button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default navbar-btn" class="btn btn-default">
+                  <button type="button" class="btn btn-default navbar-btn">
                     <span class="glyphicon glyphicon-user"></span>
                     <span class="badge">5</span>
                   </button>
-                  <button type="button" class="btn btn-default navbar-btn" class="btn btn-default">
+                  <button type="button" class="btn btn-default navbar-btn">
                     <span class="glyphicon glyphicon-comment"></span>
                     <span class="badge">1</span>
                   </button>
-                  <button type="button" class="btn btn-default navbar-btn" class="btn btn-default">
+                  <button type="button" class="btn btn-default navbar-btn">
                     <span class="glyphicon glyphicon-globe"></span>
                     <span class="badge">3</span>
                   </button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default navbar-btn" class="btn btn-default">
+                  <button type="button" class="btn btn-default navbar-btn">
                     <span class="glyphicon glyphicon-lock"></span>
                   </button>
                   <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default navbar-btn" class="btn btn-default dropdown toggle"
+                    <button type="button" class="btn btn-default navbar-btn dropdown toggle"
                       data-toggle="dropdown">
                       <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
-                      <li><a href="#" Log Out... </a></li>
+                      <li><a href="#"> Log Out... </a></li>
                       </ul>
                     </div>
                   </div>
                 </div>
               </div>
-            </ul>
           </div> <!-- /.navbar-collapse -->
         </div> <!-- /.container -->
       </nav>
-
-        </div>
-      </nav>
       <!-- The container for our grid. Outermost grid must be placed within a
       container or conatiner-fluid class.
-      <div class="container">
+      <div class="container" -->
           <!-- The row that contains the three main columns of the website -->
           <div class="row">
             <!-- Left sidebar: A cell that spans 2 columns-->
             <div class="col-md-2">
-              Left Sidebar
+              <ul class="nav nav-pills nav-stacked">
+                <li role="presentation"><a href="#">John Vilk</a></li>
+                <li role="presentation">
+                  <a href="#"><span class="glyphicon glyphicon-pencil"></span>
+                    Edit Profile</a>
+                  </li>
+                  <!-- List itmes that are just text, not indented, and look like
+                  Facebook section labels -->
+                  <li role="presentation" class="active">
+                    <a href="#"><span class="glyphicon glyphicon-comment"></span>
+                      Messages
+                      <span class="badge">7</span>
+                    </a>
+                  </li>
+                  <li role="presentation">
+                    <a href="#"><span class="glyphicon glyphicon-calender"></span>
+                      Events
+                    </a></li>
+                    <li role="presentation">
+                      <a href="#"><span class="glyphicon glyphicon-picture"></span>
+                        Photos </a>
+                      </li>
+                    <li role="presentation">
+                      <a href="#"><span class="glyphicon glyphicon-gift"></span>
+                        Gifts </a>
+                      </li>
+                      <!-- saved also has number beside it-->
+                      <li role="presentation">
+                        <a href="#"><span class="glyphicon glyphicon-bookmark"></span>
+                          Saved
+                        <span class="badge">2</span>
+                      </a>
+                    </li>
+                    <li role="presentation">
+                      <a href="#"><span class="glyphicon glyphicon-tags"></span>
+                        Sale Groups </a>
+                      </li>
+                      <li role="presentation">PAGES</li>
+                      <li role="presentation">
+                        <a href="#"><span class="glyphicon glyphicon-plus"></span>
+                          Create Page </a>
+                        </li>
+                        <li role="presentation">GROUPS</li>
+                        <li role="presentation">
+                          <a href="#"><span class="glyphicon glyphicon-user"></span>
+                            New Groups </a>
+                          </li>
+                        <li role="presentation">FRIENDS</li>
+                        <li role="presentation">
+                          <a href="#"><span class="glyphicon glyphicon-pushpin"></span>
+                            Amherst, MA </a>
+                          </li>
+                        </ul>
             </div>
             <!-- Main feed, cell spans 7 columns-->
             <div class="col-md-7">
@@ -104,15 +152,126 @@
               <div style="height: 99999px">
               </div>
             </div>
-            <!--Right sidebar, spans 3 columns-->
-            <div class="col-md-3">
-              Right Sidebar
-            </div>
-            <div class="chat-popup">
-              CHAT MENU
-            </div>
+          <!-- Right sidebar: A cell that spans 3 columns -->
+          <div class="col-md-3">
+          <!-- Nested grid! Like the outer grid, it's just a sequence of rows. -->
+          <!-- Ticker -->
+              <div class="row">
+                <div class="col-md-12">
+                  <a href="#" class="pull-right">
+                    <span class="glyphicon glyphicon-download-alt"></span>
+                  </a>
+                </div>
+              </div>
+              <!-- Birthday -->
+              <div class="row">
+                <div class="col-md-12">
+                  <span class="glyphicon glyphicon-gift"></span>
+                    <a href="#">Zak</a> and <a href="#">1 other</a>
+                  </div>
+                </div>
+                <!-- Trending -->
+                <div class="row">
+                  <div class="col-md-12 fb-trending">
+                    <div class="row">
+                      <div class="col-md-4 fb-trending-title">
+                        TRENDING
+                      </div>
+                      <div class="col-md-8">
+                      <ul class="nav nav-pills pull-right">
+                        <li role="presentation" class="active">
+                          <a href="#">
+                            <span class="glyphicon glyphicon-flash"></span></a>
+                        </li>
+                        <li role="presentation"><a href="#">
+                          <span class="glyphicon glyphicon-tower pull-right"></span>
+                      </a></li>
+                    <li role="presentation"><a href="#">
+                    <span class="glyphicon glyphicon-sunglasses pull-right"></span>
+                </a></li>
+              <li role="presentation"><a href="#">
+              <span class="glyphicon glyphicon-record pull-right"></span>
+            </a></li>
+            <li role="presentation"><a href="#">
+              <span class="glyphicon glyphicon-facetime-video pull-right"></span>
+              </a></li>
+            </ul>
+          </div>
         </div>
-
+    <div class="row">
+      <div class="col-md-12">
+        <ul class="media-list">
+          <li class="media">
+            <div class="media-left media-top">
+              <span class="glyphicon glyphicon-flash"></span>
+            </div>
+            <div class="media-body">
+              <a href="#">George Lucas</a>: Filmmaker Criticizes
+              New "Star Wars" Film and Direction of Franchise Under Disney
+            </div>
+            </li>
+            <li class="media">
+              <div class="media-left media-top">
+                <span class="glyphicon glyphicon-flash"></span>
+              </div>
+              <div class="media-body">
+              <a href="#">Super Smash Bros.</a>: Game Glitch Allows Players to
+              Control 8 Characters With 1 Controller
+            </div>
+          </li>
+          <li class="media">
+            <div class="media-left media-top">
+              <span class="glyphicon glyphicon-flash"></span>
+            </div>
+            <div class="media-body">
+              <a href="#">Tuukka Rask</a>: Boston Bruins Player Debuts
+              Goalie Mask for Winter Classic
+            </div>
+          </li>
+          <li class="media">
+            <div class="media-left media-top">
+              <span class="caret"></span>
+            </div>
+            <div class="media-body">
+              <a href="#">See More</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  </div>
+        <div class="row">
+          <!-- Suggested Pages -->
+          <div class="row">
+          <div class="col-md-12">
+          <div class="row">
+          <div class="col-md-8">
+            SUGGESTED PAGES
+          </div>
+          <div class="col-md-4 pull-right" ><a href="#">
+            See All
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <img src="falafel.jpg" width="100%"/>
+          <br><a href="#">Pita Pocket's</a>
+          <br> Mediterranean Restaurant · 301 likes
+          <br><button type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-thumbs-up">
+            </span>Like Page </button>
+          </div>
+        </div>
+      </div>
+    </div>
+        </div>
+      </div>
+      <div class="chat-popup">
+          CHAT MENU
+        </div>
+      </div>
       <!--... and here. -->
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
       <script src="js/jquery.min.js"></script>
