--- a/facebook.html
+++ b/facebook.html
@@ -51,17 +51,20 @@
                   <button type="button" class="btn btn-default navbar-btn">
                     John
                   </button>
+                  <button type="button" class="btn btn-default navbar-btn">
+                    Home
+                  </button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default navbar-btn">
+                  <button type="button" class="btn btn-default navbar-btn fb-notifications">
                     <span class="glyphicon glyphicon-user"></span>
                     <span class="badge">5</span>
                   </button>
-                  <button type="button" class="btn btn-default navbar-btn">
+                  <button type="button" class="btn btn-default navbar-btn fb-notifications">
                     <span class="glyphicon glyphicon-comment"></span>
                     <span class="badge">1</span>
                   </button>
-                  <button type="button" class="btn btn-default navbar-btn">
+                  <button type="button" class="btn btn-default navbar-btn fb-notifications">
                     <span class="glyphicon glyphicon-globe"></span>
                     <span class="badge">3</span>
                   </button>
@@ -91,25 +94,27 @@
           <!-- The row that contains the three main columns of the website -->
           <div class="row">
             <!-- Left sidebar: A cell that spans 2 columns-->
-            <div class="col-md-2">
+            <div class="col-md-2 fb-left-sidebar">
               <ul class="nav nav-pills nav-stacked">
                 <li role="presentation"><a href="#">John Vilk</a></li>
                 <li role="presentation">
                   <a href="#"><span class="glyphicon glyphicon-pencil"></span>
                     Edit Profile</a>
                   </li>
+                  FAVORITES
                   <!-- List itmes that are just text, not indented, and look like
                   Facebook section labels -->
                   <li role="presentation" class="active">
                     <a href="#"><span class="glyphicon glyphicon-comment"></span>
                       Messages
-                      <span class="badge">7</span>
+                      <span class="badge pull-right">7</span>
                     </a>
                   </li>
                   <li role="presentation">
-                    <a href="#"><span class="glyphicon glyphicon-calender"></span>
+                    <a href="#"><span class="glyphicon glyphicon-calendar"></span>
                       Events
-                    </a></li>
+                    </a>
+                  </li>
                     <li role="presentation">
                       <a href="#"><span class="glyphicon glyphicon-picture"></span>
                         Photos </a>
@@ -122,7 +127,7 @@
                       <li role="presentation">
                         <a href="#"><span class="glyphicon glyphicon-bookmark"></span>
                           Saved
-                        <span class="badge">2</span>
+                        <span class="badge pull-right">2</span>
                       </a>
                     </li>
                     <li role="presentation">
@@ -305,7 +310,7 @@
             </div>
           </div>
           <!-- Right sidebar: A cell that spans 3 columns -->
-          <div class="col-md-3">
+          <div class="col-md-3 fb-right-sidebar">
           <!-- Nested grid! Like the outer grid, it's just a sequence of rows. -->
           <!-- Ticker -->
               <div class="row">
@@ -331,13 +336,14 @@
                       </div>
                       <div class="col-md-8">
                       <ul class="nav nav-pills pull-right">
-                        <li role="presentation" class="active">
-                          <a href="#">
-                            <span class="glyphicon glyphicon-flash"></span></a>
+                        <li role="presentation" class="active"><a href="#">
+                            <span class="glyphicon glyphicon-flash"></span>
+                          </a>
                         </li>
                         <li role="presentation"><a href="#">
                           <span class="glyphicon glyphicon-tower pull-right"></span>
-                      </a></li>
+                      </a>
+                    </li>
                     <li role="presentation"><a href="#">
                     <span class="glyphicon glyphicon-sunglasses pull-right"></span>
                 </a></li>
