--- a/twitter.html
+++ b/twitter.html
@@ -6,11 +6,142 @@
       <meta name="viewport" content="width=device-width, initial scale=1">
       <!-- The above 3 meta tags *must* come first in the head;
         any other head content must come *after* these tags -->
-      <title>Facebook</title>
+      <title>Twitter</title>
 
       <!--Bootstrap's CSS -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <!-- Custom CSS -->
-      <link href="css/facebook.css" rel="stylesheet">
+      <link href="css/twitter.css" rel="stylesheet">
     </head>
     <body>
+      <!-- All of your HTML will go between here....-->
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+              <button type="button navbar-btn" class="navbar-toggle collapsed" data toggle="collapse"
+              data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <!-- Use home glyphicon as logo -->
+            <a class="navbar-brand" href="#">
+              <!-- How you display the icon -->
+              <span class="glyphicon glyphicon-home"></span>
+              Home
+            </a>
+          <a class="navbar-brand" href="#">
+            <span class="glyphicon glyphicon-flash"></span>
+            Moments
+          </a>
+          <a class="navbar-brand" href="#">
+            <span class="glyphicon glyphicon-bell"></span>
+            Notifications
+          </a>
+          <a class="navbar-brand" href="#">
+            <span class="glyphicon glyphicon-envelope"></span>
+            Messages
+          </a>
+        </div>
+          <!-- On mobile this is hidden by default... -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <form class="navbar-form pull-right" role="search">
+              <!-- Right aligned items -->
+              <div class="input-group">
+                <input type="text" class="form-control twitter-search" placeholder="Search Twitter">
+                <span class="input-group-btn">
+                  <button type="submit" class="btn btn-default twitter-search-icon">
+                    <span class="glyphicon glyphicon-search"></span>
+                  </button>
+                </span>
+              </div>
+            </form>
+            </div>
+          </div>
+        </nav>
+        <div class="container">
+          <!-- The row that contains the three main columns of the website. -->
+          <div class="row">
+            <!-- Left sidebar: A cell that spans 2 columns -->
+            <div class="col-md-3">
+            </div>
+            <!-- Main feed: A cell that spans 7 columns -->
+            <div class="col-md-6">
+              <!-- Status update #1 -->
+              <div class="panel panel-default twitter-status-update">
+                <div class="panel-body">
+                  <!-- Post metadata -->
+                  <div class="row">
+                  <div class="col-md-10">
+                    <div class="media">
+                      <div class="media-left media-top">
+                        PIC
+                      </div>
+                      <div class="media-body">
+                        <a href="#">
+                          NASA
+                        <span class="glyphicon glyphicon-check">
+                        </span>
+                        </a><br>
+                        @NASA<br>This spiral galaxy also has a supermassive blackhole
+                        that's also super hungry: http://www.nasa.gov/image-feature/goddard/2016/hubble
+                      </div>
+                      <div class="row img-style">
+                        <div class="col-md-10">
+                        <img src="hubble.jpg" width="130%"/>
+                      </div>
+                    </div>
+                    </div>
+                    </div>
+                    <div class="col-md-2">
+                      <button type="button" class="btn btn-default pull-right">
+                        <span class="glyphicon glyphicon-certificate following-border">
+                        </span> Following</button>
+                    </div>
+                  </div>
+                  <!-- Post content -->
+                  <div class="row">
+                    <div class="col-md-12">
+                    </div>
+                  </div>
+                12:44 PM - 6 Jan 2016
+                <div class="row">
+                  <div class="col-md-12">
+                    <ul class="list-inline">
+                      <li><a href="#"><span class="glyphicon glyphicon-arrow-left icon-style">
+                      </span>
+                    </a></li><li><a href="#">
+                      <span class="glyphicon glyphicon-refresh icon-style"></span>
+                  </a></li><li><a href="#">
+                    <span class="glyphicon glyphicon-heart icon-style">
+                    </span>
+                  </a></li><li><a href="#">
+                    <span class="glyphicon glyphicon-option-horizontal icon-style">
+                    </span>
+                  </a>
+                </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+            <div class="panel-footer">
+                <ul class="media-list">
+                  <li class="media">
+                    <div class="media-left media-top">
+                      PIC
+                    </div>
+                      <div class="media-body">
+                        <div class="input-group">
+                          <input type="text" class="form-control twitter-reply" placeholder="Reply to @NASA">
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+  </body>
+</html>
